Examples/bad/parse/setq.lifp
// (setq Atom Element)

(setq)
(setq a)
(setq (non atom))
(setq too much args)
